--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "prettier": "^2.0.5"
   }
 }
