--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,5 @@ yarn-debug.log*
 yarn-error.log*
 
 .idea
-./src/Components/Stores/fakeData.js
+.client/src/Components/Stores/fakeData.js
+.server/spotify/creds.js
