--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-client/src/Components/Stores/fakeData.js
-server/spotify/creds.js
+/client/src/Components/Stores/fakeData.js
+/server/spotify/creds.js
