--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/kolebayev/migfy-server#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jsdom": "^16.2.2"
+    "jsdom": "^16.2.2",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3",
